--- a/style.css
+++ b/style.css
@@ -1,61 +1,71 @@
-html {
-  background-color: black;
-  color: white;
-  box-sizing: border-box;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
-body {
-  display: flex;
-  flex-direction: column;
-}
+:root {
+  --font-color-darktheme: rgb(235, 235, 235);
+  --font-color-lighttheme: black;
+  --main-dark-color: #333;
+  --main-dark-color-light: #555;
+  --main-light-color-transparent: rgba(180, 180, 180, 0.884);
+  --main-color-blue-1: rgb(40, 40, 117);
 
+color: var(--font-color-darktheme);
+background-color: var(--main-dark-color);
+}
+.fullpage{
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 2fr 6fr 50px;
+}
 .header {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 5%;
-  padding-top: 2%;
+  background-color: var(--main-dark-color-light);
+  display: grid;
+  grid-auto-flow: column;
+  grid-area: 1/1/2/3;
+  align-content: center;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
-.header h1{
-  position: relative;
+.sidebar {
+  display: none;
+  grid-area: 1/1/3/2;
+  background-color: var(--main-light-color-transparent);
+  z-index: 15;
 }
-.header img{
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
+.menu{
+  width: 2.7rem;
+  margin-left: 1rem;
 }
-.links {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  padding-right: 15%;
-  padding-left: 15%;
-  padding-bottom: 0;
+.menu img{
+  height: 5rem;
 }
+.clock, .weather, .profile {
+  justify-self: end;
+  padding-top: 1.6rem;
+}
+.front-content {
+  grid-area: 2/1/3/3;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-rows: 1fr;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
-.links div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.2em;
-  padding: 1em;
-  padding-bottom: 1em;
-  border-radius: 0.5em;
-  
 }
-.links a {
-  text-decoration: none;
-  color: white;
+.news, .notes {
+  grid-area: 1/1/2/2;
+  width: 80%;
+  background-color: var(--main-light-color-transparent);
+  margin-left: 10%;
+  margin-right: 10%;
 }
-
-.links p {
-  text-decoration: none;
-  font-size: 1.2em;
-  color: white;
-  flex-grow: 0;
-  padding: 0.3em;
-  padding-bottom: 0;
+.notes {
+  grid-area: 1/2/2/3;
+}
+.footer {
+  grid-area: 3/1/4/3;
+  background-color: black;
 }
